--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ java {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         url 'https://central.sonatype.com/repository/maven-snapshots/'
@@ -21,5 +22,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'dev.vanengine:van-spring-boot-starter:0.1.16-SNAPSHOT'
+    implementation 'dev.vanengine:van-spring-boot-starter:0.1.16'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
