Use 0.1.16-SNAPSHOT from Sonatype snapshots

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'dev.vanengine:van-spring-boot-starter:0.1.16'
+    implementation 'dev.vanengine:van-spring-boot-starter:0.1.16-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
